--- a/index.ipynb
+++ b/index.ipynb
@@ -300,22 +300,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['City', 'Country', 'Population', 'Area'])"
+       "dict_values(['Solta', 'Croatia', 1700, 59])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[0].keys()"
+    "cities[0].values()"
    ]
   },
   {
