Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,11 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Philadelphia'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "philadelphia = {'City': 'Philadelphia'}"
+    "philadelphia = {'City': 'Philadelphia'}\n",
+    "philadelphia"
    ]
   },
   {
@@ -438,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +459,7 @@
        "{'city': 'Pittsburgh'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
