Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "pittsburgh = dict(City='Pittsburgh')\n",
+    "pittsburgh = dict('City='Pittsburgh')\n",
     "pittsburgh"
    ]
   },
