Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +459,13 @@
        "{'City': 'Pittsburgh'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pittsburgh = dict('City='Pittsburgh')\n",
+    "pittsburgh = dict(City='Pittsburgh')\n",
     "pittsburgh"
    ]
   },
