Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,7 @@
     }
    ],
    "source": [
-    "philadelphia = {'City': 'Philadelphia'}\n",
+    "philadelphia = {'City': 'Philadelphia', team: d}\n",
     "philadelphia"
    ]
   },
