--- a/index.ipynb
+++ b/index.ipynb
@@ -422,23 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'team' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-3726fc2a438a>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-ac2c5cc2488c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mphiladelphia\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'City'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Philadelphia'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mteam\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'boo birds'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mphiladelphia\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'team' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-3726fc2a438a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    philadelphia = {'City': 'Philadelphia', 'team'': 'boo birds'}\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "philadelphia = {'City': 'Philadelphia', team: 'boo birds'}\n",
+    "philadelphia = {'City': 'Philadelphia', 'team'': 'boo birds'}\n",
     "philadelphia"
    ]
   },
