Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,20 +422,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-3726fc2a438a>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-3726fc2a438a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    philadelphia = {'City': 'Philadelphia', 'team'': 'boo birds'}\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'City': 'Philadelphia', 'team': 'boo birds'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "philadelphia = {'City': 'Philadelphia', 'team'': 'boo birds'}\n",
+    "philadelphia = {'City': 'Philadelphia', 'team': 'boo birds'}\n",
     "philadelphia"
    ]
   },
